# CGgraph-V1.5

./: .clang-format  .clangd  .gitignore  CGgraphV1.5.cu  CMakeLists.txt  README.md  README_EN.md
project/: CG_BFS.hpp  CG_SSSP.hpp  CG_help.hpp  CGgraphV1.5.hpp  basic_def.hpp  checkResult.hpp  favor.hpp  flag.cpp  flag.hpp  processorSpeed.hpp  rank.hpp  reorderGraph.hpp  simple_threadPool.hpp  single.hpp  subgraphExtraction.hpp
src/Basic/Bitmap/: bitsOp_CPJ.hpp  fixed_bitset.cuh
src/Basic/CUDA/: cuda_check.cuh  gpu_util.cuh
src/Basic/Console/: console_V3_3.hpp  console_bar.hpp  console_var.hpp
src/Basic/Graph/: basic_def.hpp  basic_struct.hpp  checkAlgResult.hpp  compute_degree.hpp  getGraphCSR.hpp  graphFileList.hpp  sortNbr.hpp
src/Basic/Graph/Balance/: threadState.hpp  threadSteal.hpp
src/Basic/IO/: file_permission.hpp  io_adapter_V1.hpp  io_common.hpp
src/Basic/Log/: log.hpp
src/Basic/Memory/: alloc_CPJ.hpp  hugePage.hpp  memInfo_CPJ.hpp
src/Basic/Other/: checkDuplicate.hpp  errnoMsg.hpp  fileSystem_CPJ.hpp  placeholder_CPJ.hpp  random_CPJ.hpp  scan_CPJ.hpp  traits_CPJ.hpp
src/Basic/Sort/: OpenMPMergeSort.hpp
src/Basic/Thread/: atomic_linux.hpp  bindCore.hpp  omp_def.hpp
src/Basic/Timer/: timer_CPJ.hpp
src/Basic/Type/: data_type.hpp
src/Comm/MPI/: mpi_env.hpp
